--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -341,6 +341,7 @@ section
             background-color: $main_brown-hover
 
 .benefits
+    margin-bottom: 30px
     &__title
         width: 100%
         background-color: $main_brown
@@ -353,6 +354,10 @@ section
         margin: 45px 0px 0px
         display: flex
         justify-content: space-between
+    &__deco
+        width: 100%
+        height: auto
+        margin-top: 20px
 
 .benefit
     width: 100%
