--- a/4seasons/sass/style.sass
+++ b/4seasons/sass/style.sass
@@ -416,6 +416,7 @@ section
         overflow: hidden
         cursor: zoom-in
         flex-shrink: 0
+        background-color: #fff
         &:hover &-img img
             transform: scale(1.02)
         &-img
@@ -556,6 +557,7 @@ section
     opacity: 0
     visibility: hidden
     pointer-events: none
+    min-width: 0
     &__close
         position: absolute
         height: 40px
