--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -533,9 +533,12 @@ body
             object-fit: cover
             transition-duration: .6s
             transform: scale(1.03)
+            z-index: 1
     &__item
         overflow: hidden
         border-radius: 8px
+        position: relative
+        z-index: 3
         &:hover
             img
                 transform: scale(1.03)
@@ -552,10 +555,8 @@ body
     &__bandito
         width: 460px
         height: 470px
-        // background-color: #fff
         box-shadow: 0px 14px 54px rgba(0, 0, 0, 0.1)
         border-radius: 20px
-        // padding: 35px 10px
         position: relative
         z-index: 2
         flex-shrink: 0
@@ -600,10 +601,10 @@ body
     background-color: #fff
     &_blocked
         transform: none
-        background-image: url(../img/bandito.png)
         background-size: cover
-        background-repeat: no-repeat
         background-position: center
+        background-repeat: no-repeat
+        background-image: url(../img/bandito.png)
         padding: 0px
         background-color: transparent
         .bandito
@@ -1070,16 +1071,20 @@ body
             object-fit: cover
     &__preview
         overflow: hidden
+        position: relative
+        z-index: 2
         padding: 0
-        border-radius: 6px
+        overflow: hidden
         img
+            position: relative
+            z-index: 1
             transition-duration: .4s
             height: 100%
             width: 100%
             object-fit: cover
-        &:hover, &:hover
+        &:hover, &:active
             overflow: hidden
-            border-radius: 6px
+            overflow: hidden
             img
                 transform: scale(1.03)
     &__description
