--- a/zillion/sass/media.sass
+++ b/zillion/sass/media.sass
@@ -570,7 +570,6 @@ $bg_white: #f8f8f8
                     grid-template-rows: repeat(3, 1fr)
 
         &:not(.games_index)
-            &__item
             &__container
                 justify-items: center
                 grid-template-columns: repeat(1, 1fr)
@@ -682,7 +681,7 @@ $bg_white: #f8f8f8
             height: 70%
             width: 70%
 
-    .games.games_index
+    .games
         .games__container
             grid-template-columns: repeat(1, 1fr)
 
