--- a/zillion/sass/style.sass
+++ b/zillion/sass/style.sass
@@ -134,6 +134,7 @@ body
         font-size: 14px
         line-height: 17px
         font-weight: 700
+        flex-shrink: 0
         &::before
             content: ''
             display: inline-block
@@ -527,7 +528,10 @@ body
         height: 100%
         width: 100%
         position: relative
+        position: relative
+        z-index: 3
         img
+            z-index: 1
             height: 100%
             width: 100%
             object-fit: cover
@@ -541,7 +545,7 @@ body
         z-index: 3
         &:hover
             img
-                transform: scale(1.03)
+                transform: scale(1.06)
         &:first-child
             grid-row: 1 / 3
 
@@ -712,7 +716,10 @@ body
         border-radius: 8px
         overflow: hidden
         display: block
+        position: relative
+        z-index: 3
         img
+            z-index: 1
             height: 100%
             width: 100%
             object-fit: cover
@@ -844,7 +851,9 @@ body
         border-radius: 12px
         overflow: hidden
         position: relative
+        z-index: 3
         img
+            z-index: 1
             width: 100%
             height: 100%
             object-fit: cover
