--- a/zillion/sass/media.sass
+++ b/zillion/sass/media.sass
@@ -683,7 +683,7 @@ $bg_white: #f8f8f8
 
     .games
         .games__container
-            grid-template-columns: repeat(1, 1fr)
+            grid-template-columns: repeat(1, 1fr) !important
 
     .about
         &__container
