--- a/fujifilm/sass/style.sass
+++ b/fujifilm/sass/style.sass
@@ -252,6 +252,9 @@ section
     right: 0px
     top: 50%
     transform: translate(0, -50%)
+    display: flex
+    flex-direction: column
+    align-items: flex-end
     z-index: 3
     &__top
         display: flex
@@ -267,7 +270,11 @@ section
         svg
             fill: #ffffff
     &__camera
-        padding-right: 0
+        transform: translateX(113px)
+        svg
+            margin-right: 18px
+        &:hover
+            transform: translateX(0px)
     &__cart
         margin-top: 8px
         transform: translateX(83px)
@@ -284,7 +291,7 @@ section
         flex-direction: column
         align-items: center
         width: 35px
-        right: -83px
+        // right: -83px
         position: relative
     &__link
         position: relative
